[package]
name = "feather-definitions-generator"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-data = { path = "../../data" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.5"
anyhow = "1.0"
walkdir = "2.3"
heck = "0.3"
itertools = "0.9"

syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
